<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232020"

    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="166dp"
        android:text="@string/txt_header"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/myName"
        android:textColor="#ED8D92"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtProfession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="199dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="cursive"
        android:text="@string/Profession"
        android:textColor="#ED8D92"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="280dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="296dp"
        android:contentDescription="@string/Pic_info"
        android:src="@drawable/pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/circle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="monospace"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/txt_work"
        android:textColor="#51F404"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkill"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_Skills"
        android:textColor="@color/black"
        app:icon="@drawable/arrows"
        app:iconGravity="end"
        app:iconPadding="37dp"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtProfession" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProjects"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_Projects"
        android:textColor="@color/black"
        app:icon="@drawable/arrows"
        app:iconGravity="end"
        app:iconPadding="10dp"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/btnSkill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExperience"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_Experience"
        android:textColor="@color/black"
        app:icon="@drawable/arrows"
        app:iconGravity="end"
        app:iconPadding="-5dp"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/btnProjects" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEducation"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/btnEducation"
        android:textColor="@color/black"
        app:icon="@drawable/arrows"
        app:iconGravity="end"
        app:iconPadding="-1dp"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/btnExperience" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="monospace"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/lbl_Phone"
        android:textColor="#ED8D92"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="monospace"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/lbl_Email"
        android:textColor="#ED8D92"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="monospace"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/info_Phone"
        android:textColor="#ED8D92"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/info_Email"
        android:textColor="#ED8D92"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        >
        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="365dp"
            android:layout_height="91dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal"
            android:padding="16dp"
            >

            <Button
                android:id="@+id/leetcodeButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/btn_leetcode"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/linkedinButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/btn_LinkedIn" />

            <Button
                android:id="@+id/githubButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/btn_GitHub" />

            <Button
                android:id="@+id/YouTubeButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/btn_YouTube" />

            <Button
                android:id="@+id/xButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/btn_X" />

            <Button
                android:id="@+id/instagramButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/btn_Instagram" />

        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>




