<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/project_xml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232020"

    tools:context=".Project">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="105dp"
        android:text="@string/lbl_projectTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="242dp"
        android:layout_height="255dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/project_animation" />

    <TextView
        android:id="@+id/txt_title_project_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="111dp"
        android:fontFamily="monospace"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/first_project_info_1"
        android:textColor="#ED8D92"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

    <TextView
        android:id="@+id/txt_title_project_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="124dp"
        android:fontFamily="monospace"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/second_project_info_1"
        android:textColor="#ED8D92"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_project_1" />


</androidx.constraintlayout.widget.ConstraintLayout>